# NAI

./: README.md  nai01.cpp  nai3.cpp
nai1/: nai1
nai10/: graph.dot  graph.txt  nai10  nai10.cpp
nai12/: nai12.cpp
nai14/: nai14  nai14.cpp
nai2/: nai2  nai2.cpp
nai3/: nai3  nai3.docx
nai4/: nai4  nai4 lab  nai4lab.cpp
nai6/nai6/: main.cpp
nai7/: CMakeLists.txt  nai7.cpp
nai8/: CMakeLists.txt  main.cpp
pfp/: file.txt  nai11.cpp
